--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -8,3 +10,48 @@ html{
   font-size: 62.5%;
 }
 
+body{
+  font-family: 'Jost', sans-serif;
+}
+
+
+
+// colors
+:root{
+  /*** Primary colors ***/
+  --peach: #E78168;
+  --black: #1D1C1E;
+  --white: #FFFFFF;
+
+  /*** Secondary colors ***/
+  --lightPeach: #FFAD9B;
+  --darkGrey: #333136;
+  --lightGrey: #f1f3f5;
+
+}
+
+@mixin body-font(){
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  font-weight: 400;
+}
+
+@mixin font-h1(){
+  font-size: 4.8rem;
+  line-height: 4.8rem;
+  font-weight: 500;
+}
+
+@mixin font-h2(){
+  font-size: 4rem;
+  line-height: 4.8rem;
+  letter-spacing: 2px;
+  font-weight: 500;
+}
+
+@mixin font-h3(){
+  font-size: 2rem;
+  line-height: 2.6rem;
+  letter-spacing: 5px;
+  font-weight: 500;
+}
