--- a/src/Components/Navbar.module.scss
+++ b/src/Components/Navbar.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   padding: 5rem 0;
+  position: relative;
 }
 
 .navLogo {
@@ -16,21 +17,67 @@
   display: flex;
   // justify-content: space-evenly;
 
-  li{
+  .link {
     list-style: none;
     font-size: 1.4rem;
     text-transform: uppercase;
-    letter-spacing: .2rem;
+    letter-spacing: 0.2rem;
     font-weight: 400;
     cursor: pointer;
     color: var(--darkGrey);
-    
-    &:hover{
+
+    &:hover {
       text-decoration: underline;
     }
   }
+
+  // font-size: 2.4rem;
+  // color: var(--white);
+
+  // position: absolute;
+  // top: 100%;
+  // left: 0;
+  // flex-direction: column;
+  // background-color: var(--black);
+  // width: 100%;
+  // gap: 2rem;
+  // padding: 2.5rem;
 }
 
-.mr{
+.mr {
   margin-right: 5rem;
+}
+
+@media screen and (width <= 760px) {
+  .mr {
+    margin-right: 3rem;
+  }
+}
+
+@media screen and (width <= 660px) {
+  .nav {
+    padding: 3rem;
+  }
+
+  .navLogo {
+    width: 17rem;
+  }
+
+  .navLinks {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    flex-direction: column;
+    background-color: var(--black);
+    width: 100%;
+    gap: 2rem;
+    padding: 3rem;
+    // transition: transform .6s ease-in-out;
+    display: none;
+
+    .link {
+      font-size: 2rem;
+      color: var(--white);
+    }
+  }
 }
