--- a/src/index.scss
+++ b/src/index.scss
@@ -1,61 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
+html {
   font-size: 62.5%;
 }
 
-body{
-  font-family: 'Jost', sans-serif;
+body {
+  font-family: "Jost", sans-serif;
 }
-
-
 
 // colors
-:root{
+:root {
   /*** Primary colors ***/
-  --peach: #E78168;
-  --black: #1D1C1E;
-  --white: #FFFFFF;
+  --peach: #e78168;
+  --black: #1d1c1e;
+  --white: #ffffff;
 
   /*** Secondary colors ***/
-  --lightPeach: #FFAD9B;
+  --lightPeach: #ffad9b;
   --darkGrey: #333136;
   --lightGrey: #f1f3f5;
-
 }
 
-@mixin body-font(){
+@mixin body-font() {
   font-size: 1.6rem;
   line-height: 2.6rem;
   font-weight: 400;
 }
 
-@mixin font-h1(){
+@mixin font-h1() {
   font-size: 4.8rem;
   line-height: 4.8rem;
   font-weight: 500;
 }
 
-@mixin font-h2(){
+@mixin font-h2() {
   font-size: 4rem;
   line-height: 4.8rem;
   letter-spacing: 2px;
   font-weight: 500;
 }
 
-@mixin font-h3(){
+@mixin font-h3() {
   font-size: 2rem;
   line-height: 2.6rem;
   letter-spacing: 5px;
   font-weight: 500;
 }
 
-.mainPadding{
+.container {
   padding: 0 10rem;
+}
+
+.show{
+  display: flex;
+  // transform: translateY(150%);
+  transition: transform .6s ease-in-out;
+  animation: showNav .6s ease-in-out;
+}
+
+@media screen and (width <= 820px) {
+  .container {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (width <= 660px){
+  .container {
+    padding: 0;
+  }
+}
+
+@keyframes showNav{
+  0%{
+    opacity: 0;
+    transform: translateY(-20rem);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
