--- a/src/Components/Navbar.module.scss
+++ b/src/Components/Navbar.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   padding: 5rem 0;
   position: relative;
+  transition: transform .6s ease-in-out;
 }
 
 .navLogo {
@@ -15,7 +16,6 @@
 
 .navLinks {
   display: flex;
-  // justify-content: space-evenly;
 
   .link {
     list-style: none;
@@ -31,17 +31,6 @@
     }
   }
 
-  // font-size: 2.4rem;
-  // color: var(--white);
-
-  // position: absolute;
-  // top: 100%;
-  // left: 0;
-  // flex-direction: column;
-  // background-color: var(--black);
-  // width: 100%;
-  // gap: 2rem;
-  // padding: 2.5rem;
 }
 
 .mr {
@@ -66,14 +55,16 @@
   .navLinks {
     position: absolute;
     top: 100%;
-    left: 0;
+    left: 100%;
     flex-direction: column;
     background-color: var(--black);
     width: 100%;
     gap: 2rem;
     padding: 3rem;
-    // transition: transform .6s ease-in-out;
-    display: none;
+    transition: transform .6s ease-in-out;
+    // transform: translateX(-100%);
+    // transform: ;
+    // display: none;
 
     .link {
       font-size: 2rem;
