--- a/src/Components/Navbar.module.scss
+++ b/src/Components/Navbar.module.scss
@@ -6,6 +6,7 @@
   padding: 5rem 0;
   position: relative;
   transition: transform .6s ease-in-out;
+  z-index: 9;
 }
 
 .navLogo {
@@ -55,7 +56,8 @@
   .navLinks {
     position: absolute;
     top: 100%;
-    left: 100%;
+    right: 0;
+    // left: 100%;
     flex-direction: column;
     background-color: var(--black);
     width: 100%;
@@ -64,7 +66,7 @@
     transition: transform .6s ease-in-out;
     // transform: translateX(-100%);
     // transform: ;
-    // display: none;
+    display: none;
 
     .link {
       font-size: 2rem;
