--- a/src/Components/Blob.module.scss
+++ b/src/Components/Blob.module.scss
@@ -11,10 +11,24 @@
   right: -10%;
   z-index: -5;
   transform: rotateZ(180deg);
+  // display: none;
 }
 
 @media screen and (width <= 1080px){
-  .left, .right{
+  .left{
     display: none;
   }
 }
+
+@media screen and (width <= 1450px){
+  .right{
+    display: none;
+  }
+}
+
+// @supports (-webkit-appearance: none) and (not (-moz-appearance: none)) {
+//   /* Chrome specific styles */
+//   .your-class {
+//     color: red;
+//   }
+// }
