--- a/src/Components/CTA.module.scss
+++ b/src/Components/CTA.module.scss
@@ -1,16 +1,23 @@
 @import "../mixins.scss";
 
+.ctaContainer{
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  width: 100%;
+  position: absolute;
+  top: -40%;
+  left: 0;
+}
+
 .cta {
-  // width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 8rem;
   background-color: var(--peach);
   color: var(--white);
-  position: absolute;
-  left: 0;
-  top: 90%;
+  position: relative;
   width: 100%;
   overflow: hidden;
 }
@@ -35,9 +42,7 @@
 
 @media screen and (width <= 850px) {
   .ctaContainer {
-    padding: 0 2rem;
-    position: relative;
-    width: 100%;
+    padding: 0 2rem !important;
   }
 
   .cta {
@@ -45,6 +50,13 @@
     text-align: center;
     gap: 2rem;
     padding: 5rem 2rem;
+  }
+}
+
+@media screen and (width <= 620px){
+  .ctaContainer {
+    padding-top: 15rem !important;
+    padding-bottom: 15rem;
   }
 }
 
@@ -56,6 +68,14 @@
 
     p {
       font-size: 1.5rem;
+    }
+  }
+}
+
+@media screen and (width <= 320px){
+  .ctaText{
+    h2{
+      font-size: 2.8rem;
     }
   }
 }
