--- a/src/Components/Navbar.module.scss
+++ b/src/Components/Navbar.module.scss
@@ -25,10 +25,14 @@
     letter-spacing: 0.2rem;
     font-weight: 400;
     cursor: pointer;
-    color: var(--darkGrey);
-
+    
     &:hover {
       text-decoration: underline;
+    }
+    
+    a{
+      text-decoration: none;
+      color: var(--darkGrey);
     }
   }
 
