--- a/src/Components/Projects.module.scss
+++ b/src/Components/Projects.module.scss
@@ -26,7 +26,7 @@
   .serviceImg {
     width: 100%;
     height: 30rem;
-    object-fit: fill;
+    object-fit: cover;
     border-radius: 1.5rem;
   }
 
