contact page complete

--- a/src/Components/BannerLarge.module.scss
+++ b/src/Components/BannerLarge.module.scss
@@ -1,6 +1,6 @@
 .bannerContainer {
   background-color: var(--peach);
-  height: 48rem;
+  // height: 48rem;
   position: relative;
   overflow: hidden;
   display: flex;
