--- a/src/Components/Footer.module.scss
+++ b/src/Components/Footer.module.scss
@@ -46,6 +46,11 @@
   }
 }
 
+.ancor{
+  text-decoration: none;
+  color: var(--white);
+}
+
 .hr2 {
   margin-top: 4rem;
   border: 0.1rem solid var(--darkGrey);
