--- a/src/Components/Navbar.module.scss
+++ b/src/Components/Navbar.module.scss
@@ -75,6 +75,10 @@
     .link {
       font-size: 2rem;
       color: var(--white);
+
+      .anchor{
+        color: var(--white);
+      }
     }
   }
 }
